Final version of the Google Homepage project 8/26/2020

--- a/index.html
+++ b/index.html
@@ -6,24 +6,35 @@
     </head>
 
     <body>
-        <li id="about">
-            <a href="https://about.google/" >About</a>
-        </li>
-        <li id="store">
-            <a href="https://store.google/" >Store</a>
-        </li>
-        <li id="gmail">
-            <a href="https://about.google/" >Gmail</a>
-        </li>
-        <li id="images">
-            <a href="https://store.google/" >Images</a>
-        </li>
-        <li id="sign-in">
-            <a href="https://accounts.google.com" >Sign In</a>
-        </li>
+        <div>
+            <ul>
+                <li class="left"><a href="#">About</a></li>
+                <li class="left"><a href="#">Store</a></li>
+                <li class="sign-in"><a href="#">Sign In</a></li>
+                <li class="right"><a href="#">Images</a></li>
+                <li class="right"><a href="#">Gmail</a></li>
+            </ul>
+        </div>
+        <br><br><br>
         <img src="images/googlelogo.png" alt="Google logo">
-        <input type = "text">
+        <div class="main">
+            <input type = "text"> <br><br>
+            <button class="button" type="submit">Google Search</button>
+            <button class="button" type="submit">I'm Feeling Lucky</button>
+        </div>
+        <div class = "footer">
+            <ul>
+                <li class="left"><a href="#">Advertising</a></li>
+                <li class="left"><a href="#">Business</a></li>
+                <li class="left"><a href="#">How Search Works</a></li>
+                <li class="right"><a href="#">Privacy</a></li>
+                <li class="right"><a href="#">Terms</a></li>
+                <li class="right"><a href="#">Settings</a></li>
+            </ul>
+        </div>
         
+    
+
     </body>
 
 
